--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "External/JUCE"]
 	path = External/JUCE
 	url = git@github.com:juce-framework/JUCE.git
+[submodule "External/googletest"]
+	path = External/googletest
+	url = git@github.com:google/googletest.git
